<resources>
    <string name="app_name">CheatShqip</string>
    <string name="translate">Translate</string>
    <string name="back">Back</string>
    <string name="singular">Singular</string>
    <string name="plural">Plural</string>
    <string name="declensions">Declensions</string>
    <string name="singular_indefinite">Singular Indefinite</string>
    <string name="singular_definite">Singular Definite</string>
    <string name="plural_indefinite">Plural Indefinite</string>
    <string name="plural_definite">Plural Definite</string>
    <string name="nominative">Nominative</string>
    <string name="genitive">Genitive</string>
    <string name="dative">Dative</string>
    <string name="accusative">Accusative</string>
    <string name="ablative">Ablative</string>
    <string name="word_detail_error">Could not load word details.</string>
    <string name="word">Word</string>
    <string name="nav_translate">Translate</string>
    <string name="nav_translate_content_description">Translate tab</string>
    <string name="nav_decline">Decline</string>
    <string name="nav_decline_content_description">Decline tab</string>
    <string name="nav_conjugate">Conjugate</string>
    <string name="nav_conjugate_content_description">Conjugate tab</string>
    <string name="decline_search_placeholder">Albanian word</string>
    <string name="decline_action">Decline</string>
    <string name="decline_not_found">No declensions found for this word.</string>
    <string name="conjugate_placeholder">Coming soon</string>
    <string name="app_update_blocking_title">Update required</string>
    <string name="app_update_blocking_message">A new version of CheatShqip is required to keep using the app.</string>
    <string name="app_update_blocking_action">Update now</string>
    <string name="app_update_not_deliverable_message">The update can\'t be downloaded in the app right now. Get it from the Play Store instead.</string>
    <string name="app_update_open_play_store">Open Play Store</string>
    <string name="app_update_incentive_title">Update available</string>
    <string name="app_update_incentive_message">A new version of CheatShqip is ready to install.</string>
    <string name="app_update_incentive_accept">Update</string>
    <string name="app_update_incentive_decline">Not now</string>
    <string name="app_update_downloading">Downloading update…</string>
    <string name="app_update_ready_message">Update downloaded. The app will restart to install it.</string>
    <string name="app_update_ready_action">Restart</string>
</resources>