package com.cheatshqip.domain

enum class WordKind {
    Name
}
