package com.cheatshqip.domain

enum class WordGender {
    Feminine
}
