appId: com.cheatshqip
---
- launchApp:
    clearState: true
- tapOn: "Word"
- inputText: "card"
- tapOn: "Translate"
- extendedWaitUntil:
    visible: "kartushkë"
    timeout: 3000
- takeScreenshot: translate_word_results