appId: com.cheatshqip
---
- runScript: scripts/wiremock-reset.js
- launchApp:
    clearState: true
- runScript: scripts/wiremock-stub-error.js
- tapOn: "Word"
- inputText: "card"
- tapOn: "Translate"
- extendedWaitUntil:
    visible: "Something went wrong"
    timeout: 3000
