appId: com.cheatshqip
---
- launchApp:
    clearState: true
- tapOn: "Word"
- inputText: "card"
- tapOn: "Translate"
- extendedWaitUntil:
    visible: "kartushkë"
    timeout: 3000
- tapOn: "kartushkë"
- extendedWaitUntil:
    visible: "Nominative"
    timeout: 3000
- assertVisible: "Name"
- assertVisible: "Feminine"
- assertVisible: "kartushk/ë,-a"
- assertVisible: "kartushkë"
- assertVisible: "Nominative"
- assertVisible: "kartushka"
- assertVisible: "Genitive"
- assertVisible: "kartushkës"
- assertVisible: "Dative"
- assertVisible: "Accusative"
- assertVisible: "kartushkën"
- assertVisible: "Ablative"
- assertVisible: "kartushkave"
- takeScreenshot: word_detail_screen